Added support for accessing covariance matrix and inverse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 # Created by Manuel Blum on 2011-05-25.
 # Copyright 2013 University of Freiburg.
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
+set (CMAKE_CXX_STANDARD 11)
+set(CXX_STANDARD_REQUIRED ON)
 
 PROJECT(libgp CXX C)
 
@@ -10,11 +12,12 @@ IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
 ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
 
-set(CMAKE_CXX_FLAGS_RELEASE "-DCLSQUARE -Wall -O2 -fPIC")
-set(CMAKE_CXX_FLAGS_DEBUG "-DCLSQUARE -Wall -g -fPIC")
+set(CMAKE_CXX_FLAGS_RELEASE "-DCLSQUARE -Wall -O3 -fPIC")
+set(CMAKE_CXX_FLAGS_DEBUG "-DCLSQUARE -Wall -g -O0 -fPIC")
 
-OPTION(BUILD_TESTS "Build tests" ON)
-OPTION(BUILD_EXAMPLES "Build examples" ON)
+OPTION(BUILD_SHARED_LIBS "Build shared libs" OFF)
+OPTION(BUILD_TESTS "Build tests" OFF)
+OPTION(BUILD_EXAMPLES "Build examples" OFF)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_MODULE_PATH})
 
