Changed gp target to libgp target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
 INCLUDE("Sources.cmake")
 
 # ----- Add library target -----
-ADD_LIBRARY(gp ${LIBGP_SRC} ${LIBGP_INTERFACES})
+ADD_LIBRARY(libgp ${LIBGP_SRC} ${LIBGP_INTERFACES})
 
 # ----- Generate PKgconfig file ----
 get_property(LIB64 GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS)
@@ -57,8 +57,8 @@ IF(BUILD_TESTS)
 ENDIF()
 
 # ----- Install -----
-INSTALL(FILES ${LIBGP_INTERFACES} DESTINATION include/gp)
-INSTALL(TARGETS gp
+INSTALL(FILES ${LIBGP_INTERFACES} DESTINATION include/libgp)
+INSTALL(TARGETS libgp
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
